--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ org.gradle.logging.level=info
 
 #Minecraft related
 minecraft_version=1.18.1
-forge_version=39.0.5
+forge_version=39.0.10
 mod_version=0.7.8.1r
 release_type=release
 mappings_channel=official
@@ -21,14 +21,14 @@ ttoolkit_version=0.1.3
 #Mod dependencies
 cc_version=1.18.1:1.99.1
 curios_version=1.18-5.0.2.4
-minecolonies_version=1.18.1-1.0.279-BETA
+minecolonies_version=1.18.1-1.0.351-ALPHA
 appliedenergistics_version=10.0.0-beta.1
 patchouli_version=1.18.1-61
 
 #Mod dependencies which are needed for other mods
 #For minecolonies
-structurize_version=1.18.1-1.0.319-BETA
-domumornamentum_version=1.18-1.0.25-ALPHA
+structurize_version=1.18.1-1.0.321-ALPHA
+domumornamentum_version=1.18-1.0.33-ALPHA
 blockui_version=1.18-0.0.34-ALPHA
 multipiston_version=1.18-1.2.2-ALPHA
 
