--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,3 @@
 files:
   - source: src/main/resources/assets/advancedperipherals/lang/en_us.json
-    translation: src/main/resources/assets/advancedperipherals/lang/%locale_with_underscore%
+    translation: src/main/resources/assets/advancedperipherals/lang/%locale_with_underscore%.json
