--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ org.gradle.logging.level=info
 #Minecraft related
 minecraft_version=1.18.1
 forge_version=39.0.55
-mod_version=0.7.8.1r
+mod_version=0.7.9r
 release_type=release
 mappings_channel=official
 mappings_version=1.18.1
@@ -22,7 +22,7 @@ ttoolkit_version=0.1.3
 cc_version=1.18.1:1.99.1
 curios_version=1.18-5.0.2.4
 minecolonies_version=1.18.1-1.0.351-ALPHA
-appliedenergistics_version=10.0.0-beta.1
+appliedenergistics_version=10.0.1
 patchouli_version=1.18.1-61
 
 #Mod dependencies which are needed for other mods
@@ -32,8 +32,5 @@ domumornamentum_version=1.18-1.0.33-ALPHA
 blockui_version=1.18-0.0.34-ALPHA
 multipiston_version=1.18-1.2.2-ALPHA
 
-#To better test
-jei_version=1.18.1:9.1.0.46
-
-
 #Mod dependencies for testing stuff(Only used in the dev environment)
+jei_version=1.18.1:9.1.0.46
