--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -39,23 +39,17 @@ body:
       multiple: false
       options:
         - Own compiled build.
-        - 0.7.8r (Latest)
-        - 0.7.7.1r
-        - 0.7.7r
+        - 1.18.1-0.7.9r (Latest 1.18)
+        - 1.16.5-0.7.7.1r (Latest 1.16)
+        - 1.16.5-0.7.7r
+        - 1.18.1-0.7.8.1r
+        - 1.18.1-0.7.8r
+        - 1.18.1-0.7.7r
+        - 1.16.5-0.7.6r
         - 0.7.6r
         - 0.7.5.1r
         - 0.7.5r
         - 0.7.4.1b
-        - 0.7.4r 
-        - 0.7.3r
-        - 0.7.2r 
-        - 0.7.1r
-        - 0.7.0.1r
-        - 0.7r
-        - 0.6.7b
-        - 0.6.6b
-        - 0.6r
-        - 0.5.x
         - older
     validations:
       required: true
@@ -63,7 +57,7 @@ body:
     attributes:
       label: Minecraft, Forge and maybe other related mods versions
       description: What version of Forge and Minecraft do you use?
-      placeholder: Forge 36.2.0 Minecraft 1.16.5
+      placeholder: Forge 39.0.55 Minecraft 1.18.1
     validations:
       required: true
   - type: input
