--- a/gradle.properties
+++ b/gradle.properties
@@ -5,8 +5,8 @@ org.gradle.logging.level=info
 #Minecraft related
 minecraft_version=1.18.1
 forge_version=39.0.55
-mod_version=0.7.9r
-release_type=release
+mod_version=0.7.10
+release_type=beta
 mappings_channel=official
 mappings_version=1.18.1
 jb_annotations=21.0.1
@@ -24,6 +24,7 @@ curios_version=1.18-5.0.2.4
 minecolonies_version=1.18.1-1.0.351-ALPHA
 appliedenergistics_version=10.0.1
 patchouli_version=1.18.1-61
+refinedstorage_version=1.10.0
 
 #Mod dependencies which are needed for other mods
 #For minecolonies
