--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -44,3 +44,9 @@ mandatory = false
 versionRange = "[10.0.0-beta.1,)"
 ordering = "NONE"
 side = "BOTH"
+[[dependencies.advancedperipherals]]
+modId = "refinedstorage"
+mandatory = false
+versionRange = "[1.10.0,)"
+ordnering = "NONE"
+side = "BOTH"
