Add listCraftableItems to RS Bridge Uncomment Srendi's repo in build.gradle

--- a/build.gradle
+++ b/build.gradle
@@ -215,14 +215,13 @@ repositories {
         }
     }
 
-//    JFrog needs to be renewed :P
-//    maven {
-//        name = "Srendis repo"
-//        url = "https://srendi.jfrog.io/artifactory/default-maven-local/"
-//        content {
-//            includeGroup "site.siredvin.ttoolkit"
-//        }
-//    }
+    maven {
+        name = "Srendis repo"
+        url = "https://srendi.jfrog.io/artifactory/default-maven-local/"
+        content {
+            includeGroup "site.siredvin.ttoolkit"
+        }
+    }
 }
 
 configurations {
