--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ org.gradle.logging.level=info
 #Minecraft related
 minecraft_version=1.18.1
 forge_version=39.0.55
-mod_version=0.7.10
+mod_version=0.7.10b
 release_type=beta
 mappings_channel=official
 mappings_version=1.18.1
@@ -34,4 +34,4 @@ blockui_version=1.18-0.0.34-ALPHA
 multipiston_version=1.18-1.2.2-ALPHA
 
 #Mod dependencies for testing stuff(Only used in the dev environment)
-jei_version=1.18.1:9.1.0.46
+jei_version=1.18.1:9.2.1.69
