--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -18,7 +18,7 @@ Take a look at the documentation for more.
 [[dependencies.advancedperipherals]]
 modId = "forge"
 mandatory = true
-versionRange = "[36.2.22,)"
+versionRange = "[36.2.31,)"
 ordering = "NONE"
 side = "BOTH"
 [[dependencies.advancedperipherals]]
@@ -30,54 +30,72 @@ side = "BOTH"
 [[dependencies.advancedperipherals]]
 modId = "computercraft"
 mandatory = true
-versionRange = "[1.99.0,)"
+versionRange = "[1.100.3,)"
 ordering = "NONE"
 side = "BOTH"
 [[dependencies.advancedperipherals]]
 modId = "curios"
 mandatory = false
-versionRange = "[1.16.5-4.0.5.1,)"
+versionRange = "[1.16.5-4.0.8.1,)"
 ordering = "NONE"
 side = "BOTH"
 [[dependencies.advancedperipherals]]
 modId = "appliedenergistics2"
 mandatory = false
-versionRange = "8.2.0"
+versionRange = "8.4.7"
 ordnering = "NONE"
 side = "BOTH"
 [[dependencies.advancedperipherals]]
 modId = "refinedstorage"
 mandatory = false
-versionRange = "[1.9.12,)"
+versionRange = "[1.9.17,)"
 ordnering = "NONE"
 side = "BOTH"
 [[dependencies.advancedperipherals]]
 modId = "minecolonies"
 mandatory = false
-versionRange = "[1.0.0-RELEASE,)"
+versionRange = "[1.0.505-ALPHA,)"
 ordnering = "NONE"
 side = "BOTH"
 [[dependencies.advancedperipherals]]
 modId = "mekanism"
 mandatory = false
-versionRange = "[10.0.21,)"
+versionRange = "[10.1.2,)"
 ordnering = "NONE"
 side = "BOTH"
 [[dependencies.advancedperipherals]]
 modId = "mekanismgenerators"
 mandatory = false
-versionRange = "[10.0.21,)"
+versionRange = "[10.1.2,)"
 ordnering = "NONE"
 side = "BOTH"
 [[dependencies.advancedperipherals]]
 modId = "integrateddynamics"
 mandatory = false
-versionRange = "[1.8.5,)"
+versionRange = "[1.10.7,)"
 ordnering = "NONE"
 side = "BOTH"
 [[dependencies.advancedperipherals]]
 modId = "botania"
 mandatory = false
-versionRange = "[1.16.5-416,)"
+versionRange = "[1.16.5-420.2,)"
+ordnering = "NONE"
+side = "BOTH"
+[[dependencies.advancedperipherals]]
+modId = "immersiveengineering"
+mandatory = false
+versionRange = "[1.16.5-5.0.7-143,)"
+ordnering = "NONE"
+side = "BOTH"
+[[dependencies.advancedperipherals]]
+modId = "storagedrawers"
+mandatory = false
+versionRange = "[8.5.1,)"
+ordnering = "NONE"
+side = "BOTH"
+[[dependencies.advancedperipherals]]
+modId = "draconicevolution"
+mandatory = false
+versionRange = "[3.0.21,)"
 ordnering = "NONE"
 side = "BOTH"
