--- a/gradle.properties
+++ b/gradle.properties
@@ -3,12 +3,12 @@ org.gradle.daemon=false
 org.gradle.logging.level=info
 
 #Minecraft related
-minecraft_version=1.18.1
-forge_version=39.1.2
+minecraft_version=1.18.2
+forge_version=40.0.41
 mod_version=0.7.12b
 release_type=beta
 mappings_channel=official
-mappings_version=1.18.1
+mappings_version=1.18.2
 jb_annotations=21.0.1
 
 #Test dependencies
@@ -19,19 +19,19 @@ kotlinx_coroutines_version=1.6.0-RC3
 ttoolkit_version=0.1.3
 
 #Mod dependencies
-cc_version=1.18.1:1.99.1
-curios_version=1.18-5.0.2.4
-minecolonies_version=1.18.1-1.0.351-ALPHA
-appliedenergistics_version=10.0.1
-patchouli_version=1.18.1-61
-refinedstorage_version=1.10.0
+cc_version=1.18.2:1.100.4
+curios_version=1.18.2-5.0.6.3
+minecolonies_version=1.18.2-1.0.578-ALPHA
+appliedenergistics_version=11.0.0-alpha.4
+patchouli_version=1.18.2-67
+refinedstorage_version=1.10.2
 
 #Mod dependencies which are needed for other mods
 #For minecolonies
-structurize_version=1.18.1-1.0.321-ALPHA
-domumornamentum_version=1.18-1.0.33-ALPHA
-blockui_version=1.18-0.0.34-ALPHA
-multipiston_version=1.18-1.2.2-ALPHA
+structurize_version=1.18.2-1.0.370-ALPHA
+domumornamentum_version=1.18.2-1.0.41-ALPHA
+blockui_version=1.18.2-0.0.47-ALPHA
+multipiston_version=1.18.2-1.2.3-ALPHA
 
-#Mod dependencies for testing stuff(Only used in the dev environment)
-jei_version=1.18.1:9.2.1.69
+#Mod dependencies for testing stuffw(Only used in the dev environment)
+jei_version=1.18.2:9.5.5.174
