--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,5 +1,5 @@
 modLoader = "javafml"
-loaderVersion = "[37,)"
+loaderVersion = "[40,)"
 license = "All rights reserved"
 issueTrackerURL = "https://github.com/Seniorendi/AdvancedPeripherals/issues"
 logoFile = "pack.png"
@@ -17,19 +17,19 @@ Adds things like the Me Bridge, various types of turtles, the Chat Box and more.
 [[dependencies.advancedperipherals]]
 modId = "forge"
 mandatory = true
-versionRange = "[39.0.55,)"
+versionRange = "[40.0.41,)"
 ordering = "NONE"
 side = "BOTH"
 [[dependencies.advancedperipherals]]
 modId = "minecraft"
 mandatory = true
-versionRange = "[1.18.1,)"
+versionRange = "[1.18.2,)"
 ordering = "NONE"
 side = "BOTH"
 [[dependencies.advancedperipherals]]
 modId = "computercraft"
 mandatory = true
-versionRange = "[1.99.0,)"
+versionRange = "[1.100.4,)"
 ordering = "NONE"
 side = "BOTH"
 [[dependencies.advancedperipherals]]
@@ -41,12 +41,30 @@ side = "BOTH"
 [[dependencies.advancedperipherals]]
 modId = "ae2"
 mandatory = false
-versionRange = "[10.0.0-beta.1,)"
+versionRange = "[11.0.0-alpha.4,)"
 ordering = "NONE"
 side = "BOTH"
 [[dependencies.advancedperipherals]]
 modId = "refinedstorage"
 mandatory = false
-versionRange = "[1.10.0,)"
+versionRange = "[1.10.2,)"
 ordnering = "NONE"
+side = "BOTH"
+[[dependencies.advancedperipherals]]
+modId = "minecolonies"
+mandatory = false
+versionRange = "[1.18.2-1.0.578-ALPHA,)"
+ordering = "NONE"
+side = "BOTH"
+[[dependencies.advancedperipherals]]
+modId = "curios"
+mandatory = false
+versionRange = "[1.18.2-1.0.578-ALPHA,)"
+ordering = "NONE"
+side = "BOTH"
+[[dependencies.advancedperipherals]]
+modId = "patchouli"
+mandatory = false
+versionRange = "[1.18.2-67,)"
+ordering = "NONE"
 side = "BOTH"
