--- a/gradle.properties
+++ b/gradle.properties
@@ -5,8 +5,8 @@ org.gradle.logging.level=info
 #Minecraft related
 minecraft_version=1.18.2
 forge_version=40.0.41
-mod_version=0.7.12b
-release_type=beta
+mod_version=0.7.13a
+release_type=alpha
 mappings_channel=official
 mappings_version=1.18.2
 jb_annotations=21.0.1
