Fix changelog of curseforge and modrinth uploads

--- a/build.gradle
+++ b/build.gradle
@@ -373,7 +373,7 @@ curseforge {
         }
         addGameVersion "${minecraft_version}"
         try {
-            changelog = "${project.changelog.get(project.version).withHeader(false).toText()}"
+            changelog = "${project.changelog.get("${minecraft_version}-${project.version}").withHeader(false).toText()}"
             changelogType = "markdown"
         } catch (err) {
             System.out.println(err)
@@ -401,7 +401,7 @@ task publishModrinth(type: TaskModrinthUpload) {
     addLoader('forge')
 
     try {
-        changelog = "${project.changelog.get(project.version).withHeader(false).toText()}"
+        changelog = "${project.changelog.get("${minecraft_version}-${project.version}").withHeader(false).toText()}"
         changelogType = "markdown"
     } catch (err) {
         System.out.println(err)
