--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ org.gradle.logging.level=info
 
 #Minecraft related
 minecraft_version=1.18.2
-forge_version=40.0.41
+forge_version=40.1.0
 mod_version=0.7.13a
 release_type=alpha
 mappings_channel=official
@@ -21,17 +21,17 @@ ttoolkit_version=0.1.3
 #Mod dependencies
 cc_version=1.18.2:1.100.4
 curios_version=1.18.2-5.0.6.3
-minecolonies_version=1.18.2-1.0.578-ALPHA
-appliedenergistics_version=11.0.0-alpha.4
+minecolonies_version=1.18.2-1.0.662-ALPHA
+appliedenergistics_version=11.0.0-alpha.6
 patchouli_version=1.18.2-67
 refinedstorage_version=1.10.2
 
 #Mod dependencies which are needed for other mods
 #For minecolonies
-structurize_version=1.18.2-1.0.370-ALPHA
+structurize_version=1.18.2-1.0.389-RELEASE
 domumornamentum_version=1.18.2-1.0.41-ALPHA
 blockui_version=1.18.2-0.0.47-ALPHA
 multipiston_version=1.18.2-1.2.3-ALPHA
 
-#Mod dependencies for testing stuffw(Only used in the dev environment)
-jei_version=1.18.2:9.5.5.174
+#Mod dependencies for testing stuff(Only used in the dev environment)
+jei_version=1.18.2:9.7.0.180
