[#302]Fix compatibility with the minecolonies version 1.0.799-ALPHA.

--- a/gradle.properties
+++ b/gradle.properties
@@ -22,8 +22,8 @@ ae_version=8.4.7
 curios_version=1.16.5-4.0.8.1
 botania_version=1.16.5-420.2
 mekanism_version=1.16.5-10.1.2.457
-minecolonies_version=245506:3693561
-structurize_version=1.16.5-1.0.354-ALPHA
+minecolonies_version=245506:3810953
+structurize_version=1.16.5-1.0.392-RELEASE
 integrated_dynamics_version=236307:3640128
 common_capabilities_version=247007:3482420
 cyclops_core_version=232758:3517568
