--- a/gradle.properties
+++ b/gradle.properties
@@ -16,7 +16,7 @@ kotlin_version=1.3.72
 kotlinx_coroutines_version=1.3.8
 ttoolkit_version=0.1.1
 # Mod dependencies
-rs_version=1.9.17+217
+rs_version=1.9.18
 cc_version=1.16.5:1.100.5
 ae_version=8.4.7
 curios_version=1.16.5-4.0.8.1
