Disable `getPlayerRotation` functions of the ar controller

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -53,7 +53,7 @@ side = "BOTH"
 [[dependencies.advancedperipherals]]
 modId = "minecolonies"
 mandatory = false
-versionRange = "[1.18.2-1.0.662-ALPHA,)"
+versionRange = "[1.18.2-1.0.877-BETA,)"
 ordering = "NONE"
 side = "BOTH"
 [[dependencies.advancedperipherals]]
