Add Botania integration

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ org.gradle.logging.level=info
 
 # Minecraft related
 minecraft_version=1.18.2
-forge_version=40.1.54
+forge_version=40.1.60
 mod_version=0.7.15b
 release_type=beta
 mappings_channel=parchment
@@ -23,8 +23,9 @@ cc_version=1.18.2:1.100.8
 curios_version=1.18.2-5.0.6.3
 minecolonies_version=1.18.2-1.0.877-BETA
 appliedenergistics_version=11.1.4
-patchouli_version=1.18.2-67
+patchouli_version=1.18.2-72-SNAPSHOT
 refinedstorage_version=1.10.2
+botania_version=1.18.2-435
 
 # Mod dependencies which are needed for other mods
 # For minecolonies
