--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,15 @@
-import com.modrinth.minotaur.TaskModrinthUpload
-
 import java.text.SimpleDateFormat
 
 buildscript {
     repositories {
-        maven { url = 'https://maven.minecraftforge.net' }
-        maven { url = 'https://maven.parchmentmc.org' }
+        maven {
+            name = "Minecraft Forge maven"
+            url = "https://maven.minecraftforge.net"
+        }
+        maven {
+            name = "Parchment maven"
+            url = "https://maven.parchmentmc.org"
+        }
         mavenCentral()
         gradlePluginPortal()
     }
@@ -102,7 +106,7 @@ minecraft {
         }
 
         server {
-            workingDirectory project.file('run')
+            workingDirectory project.file('server')
             args '--nogui'
 
             property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
@@ -176,19 +180,23 @@ minecraft {
 repositories {
     mavenCentral()
     maven {
-        name = "Squiddev maven"
+        name = "Blamejared maven botania patchouli"
+        url = 'https://maven.blamejared.com'
+    }
+    maven {
+        name = "Squiddev maven cct"
         url = 'https://squiddev.cc/maven/'
     }
     maven {
-        // location of the maven that hosts JEI files
-        name = "Progwml6 maven"
+        name = "Progwml6 maven jei"
         url = "https://dvs1.progwml6.com/files/maven/"
     }
     maven {
+        name = "Theillusivec4 maven curios"
         url = "https://maven.theillusivec4.top/"
     }
     maven {
-        name = "LDT Team"
+        name = "LDT Team minecolonies"
         url = 'https://ldtteam.jfrog.io/ldtteam/modding'
     }
     maven {
@@ -203,11 +211,6 @@ repositories {
             includeGroup "com.jozufozu.flywheel"
         }
     }
-    maven {
-        name = "Patchouli Maven"
-        url = 'https://maven.blamejared.com'
-    }
-
     maven {
         name = "SirEdvin's private repository"
         url = "https://repo.repsy.io/mvn/siredvin/default"
@@ -237,9 +240,9 @@ dependencies {
     minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
     implementation fg.deobf("org.squiddev:cc-tweaked-${cc_version}")
     // Compile-time API required
-    //Ae2
+    // Ae2
     compileOnly fg.deobf("appeng:appliedenergistics2:${appliedenergistics_version}")
-    //Curios
+    // Curios
     compileOnly fg.deobf("top.theillusivec4.curios:curios-forge:${curios_version}:api")
     // Minimal requirements end
 
@@ -254,6 +257,9 @@ dependencies {
         transitive false
     }
 
+    // Botania
+    implementation fg.deobf("vazkii.botania:Botania:${botania_version}")
+
     // Minecolonies
     // Change to compileOnly when running `runData`
     implementation fg.deobf("com.ldtteam:minecolonies:${minecolonies_version}")
@@ -263,7 +269,7 @@ dependencies {
     implementation fg.deobf("com.ldtteam:blockui:${blockui_version}")
 
     //Patchouli
-    //runtimeOnly "vazkii.patchouli:Patchouli:${patchouli_version}"
+    runtimeOnly fg.deobf("vazkii.patchouli:Patchouli:${patchouli_version}")
 
     //Removed until fully ported
     //testImplementation fg.deobf("site.siredvin.ttoolkit:ttoolkit-${minecraft_version}:${ttoolkit_version}")
