--- a/gradle.properties
+++ b/gradle.properties
@@ -25,7 +25,9 @@ minecolonies_version=1.18.2-1.0.877-BETA
 appliedenergistics_version=11.1.4
 patchouli_version=1.18.2-72-SNAPSHOT
 refinedstorage_version=1.10.2
-botania_version=1.18.2-435
+botania_version=1.18.2-434
+create_version=mc1.18.2_v0.5.0c+146
+flywheel_version=1.18-0.6.4.87
 
 # Mod dependencies which are needed for other mods
 # For minecolonies
