--- a/gradle.properties
+++ b/gradle.properties
@@ -7,8 +7,8 @@ minecraft_version=1.18.2
 forge_version=40.1.60
 mod_version=0.7.15b
 release_type=beta
-mappings_channel=parchment
-mappings_version=2022.07.03-1.18.2
+mappings_channel=official
+mappings_version=1.18.2
 jb_annotations=21.0.1
 
 # Test dependencies
