--- a/gradle.properties
+++ b/gradle.properties
@@ -4,11 +4,11 @@ org.gradle.logging.level=info
 
 # Minecraft related
 minecraft_version=1.18.2
-forge_version=40.1.60
+forge_version=40.1.73
 mod_version=0.7.16b
 release_type=beta
-mappings_channel=official
-mappings_version=1.18.2
+mappings_channel=parchment
+mappings_version=2022.07.03-1.18.2
 jb_annotations=21.0.1
 
 # Test dependencies
@@ -19,9 +19,9 @@ kotlinx_coroutines_version=1.6.0-RC3
 ttoolkit_version=0.1.3
 
 # Mod dependencies
-cc_version=1.18.2:1.100.8
-curios_version=1.18.2-5.0.6.3
-minecolonies_version=1.18.2-1.0.877-BETA
+cc_version=1.18.2:1.100.9
+curios_version=1.18.2-5.0.7.1
+minecolonies_version=1.18.2-1.0.919-ALPHA
 appliedenergistics_version=11.1.4
 patchouli_version=1.18.2-72-SNAPSHOT
 refinedstorage_version=1.10.2
@@ -31,13 +31,13 @@ flywheel_version=1.18-0.6.4.87
 
 # Mod dependencies which are needed for other mods
 # For minecolonies
-structurize_version=1.18.2-1.0.411-ALPHA
+structurize_version=1.18.2-1.0.424-ALPHA
 domumornamentum_version=1.18.2-1.0.41-ALPHA
-blockui_version=1.18.2-0.0.48-ALPHA
+blockui_version=1.18.2-0.0.55-ALPHA
 multipiston_version=1.18.2-1.2.7-ALPHA
 
 # Mod dependencies for testing stuff(Only used in the dev environment)
-jei_version=1.18.2:9.7.0.209
+jei_version=1.18.2-forge:10.1.3.240
 
 # Credentials for the intelligence repository
 spaceUsername = srendi
