--- a/gradle.properties
+++ b/gradle.properties
@@ -5,8 +5,8 @@ org.gradle.logging.level=info
 # Minecraft related
 minecraft_version=1.18.2
 forge_version=40.1.73
-mod_version=0.7.16b
-release_type=beta
+mod_version=0.7.17r
+release_type=release
 mappings_channel=parchment
 mappings_version=2022.07.03-1.18.2
 jb_annotations=21.0.1
