--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ org.gradle.logging.level=info
 # Minecraft related
 minecraft_version=1.19.2
 forge_version=43.1.15
-mod_version=0.7.19r
+mod_version=0.7.19a
 release_type=release
 mappings_channel=parchment
 mappings_version=2022.08.28-1.19.2
