--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ org.gradle.logging.level=info
 minecraft_version=1.19.2
 forge_version=43.1.15
 mod_version=0.7.19a
-release_type=release
+release_type=alpha
 mappings_channel=parchment
 mappings_version=2022.08.28-1.19.2
 jb_annotations=21.0.1
