--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -6,7 +6,7 @@ body:
       value: "Please use the search function before submitting an issue!"
   - type: textarea
     attributes:
-      label: Descripe
+      label: Describe
       description: Clearly describe the bug you found
       placeholder: A clear description of what the bug is
     validations:
@@ -39,9 +39,9 @@ body:
       multiple: false
       options:
         - Own compiled build.
+        - 1.19.2-0.7.19a (Latest 1.19)
+        - 1.18.2-0.7.19r (Latest 1.18)
         - 1.18.2-0.7.18r
-        - 1.18.2-0.7.17r
-        - 1.18.2-0.7.16b 
         - 1.16.5-0.7.8r (Latest 1.16)
         - older
     validations:
