--- a/build.gradle
+++ b/build.gradle
@@ -41,7 +41,7 @@ wrapper {
 
 def isSnapshotVersion = Boolean.valueOf(System.getProperty("snapshot"))
 
-version = "${minecraft_version}" + "-" + "${mod_version}" + (isSnapshotVersion ? "-SNAPSHOT" : "")
+version = "${mod_version}" + (isSnapshotVersion ? "-SNAPSHOT" : "")
 group = 'de.srendi.advancedperipherals'
 
 def static getenv(path = ".env") {
