Added the gas detector

--- a/gradle.properties
+++ b/gradle.properties
@@ -28,6 +28,7 @@ refinedstorage_version=1.11.0
 botania_version=1.19.2-436-SNAPSHOT
 create_version=0.5.0.d
 flywheel_version=0.6.5
+mekanism_version=1.19.2-10.3.3.470
 
 # Mod dependencies which are needed for other mods
 # For minecolonies
