--- a/build.gradle
+++ b/build.gradle
@@ -264,6 +264,13 @@ dependencies {
         transitive false
     }
 
+    compileOnly "mekanism:Mekanism:${mekanism_version}:api"
+
+    runtimeOnly fg.deobf("mekanism:Mekanism:${mekanism_version}")// core
+    runtimeOnly fg.deobf("mekanism:Mekanism:${mekanism_version}:additions")// Mekanism: Additions
+    runtimeOnly fg.deobf("mekanism:Mekanism:${mekanism_version}:generators")// Mekanism: Generators
+    runtimeOnly fg.deobf("mekanism:Mekanism:${mekanism_version}:tools")// Mekanism: Tools
+
     // Botania
     implementation fg.deobf("vazkii.botania:Botania:${botania_version}")
 
