--- a/gradle.properties
+++ b/gradle.properties
@@ -4,9 +4,9 @@ org.gradle.logging.level=info
 
 # Minecraft related
 minecraft_version=1.19.2
-forge_version=43.1.25
-mod_version=0.7.19a
-release_type=alpha
+forge_version=43.1.32
+mod_version=0.7.21b
+release_type=beta
 mappings_channel=parchment
 mappings_version=2022.09.18-1.19.2
 jb_annotations=21.0.1
@@ -21,20 +21,20 @@ ttoolkit_version=0.1.3
 # Mod dependencies
 cc_version=1.19.1:1.100.9
 curios_version=1.19.2-5.1.1.0
-minecolonies_version=1.19.2-1.0.1039-ALPHA
+minecolonies_version=1.19.2-1.0.1060-ALPHA
 appliedenergistics_version=12.1.2-beta
 patchouli_version=1.19.2-76
 refinedstorage_version=1.11.0
 botania_version=1.19.2-436-SNAPSHOT
-create_version=0.5.0.d
-flywheel_version=0.6.5
+create_version=0.5.0.f-15
+flywheel_version=0.6.7-8
 mekanism_version=1.19.2-10.3.3.470
 
 # Mod dependencies which are needed for other mods
 # For minecolonies
-structurize_version=1.19.2-1.0.446-ALPHA
+structurize_version=1.19.2-1.0.452-ALPHA
 domumornamentum_version=1.19-1.0.58-ALPHA
-blockui_version=1.19-0.0.60-ALPHA
+blockui_version=1.19-0.0.64-ALPHA
 multipiston_version=1.19-1.2.14-ALPHA
 
 # Mod dependencies for testing stuff(Only used in the dev environment)
