--- a/gradle.properties
+++ b/gradle.properties
@@ -4,8 +4,8 @@ org.gradle.logging.level=info
 
 # Minecraft related
 minecraft_version=1.19.2
-forge_version=43.1.32
-mod_version=0.7.21b
+forge_version=43.1.57
+mod_version=0.7.22b
 release_type=beta
 mappings_channel=parchment
 mappings_version=2022.09.18-1.19.2
@@ -28,6 +28,7 @@ refinedstorage_version=1.11.0
 botania_version=1.19.2-436-SNAPSHOT
 create_version=0.5.0.f-15
 flywheel_version=0.6.7-8
+mekanism_version=1.19.2-10.3.5.474
 
 # Mod dependencies which are needed for other mods
 # For minecolonies
