--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -65,7 +65,7 @@ side = "BOTH"
 [[dependencies.advancedperipherals]]
 modId = "create"
 mandatory = false
-versionRange = "[0.5.0.f-15,)"
+versionRange = "[0.5.0.f,)"
 ordering = "NONE"
 side = "BOTH"
 [[dependencies.advancedperipherals]]
