--- a/gradle.properties
+++ b/gradle.properties
@@ -3,12 +3,13 @@ org.gradle.daemon=false
 org.gradle.logging.level=info
 
 # Minecraft related
-minecraft_version=1.19.2
-forge_version=43.1.57
-mod_version=0.7.22b
+minecraft_version=1.19.3
+forge_version=44.0.1
+mod_version=0.7.21b
 release_type=beta
-mappings_channel=parchment
-mappings_version=2022.09.18-1.19.2
+mappings_channel=official
+#mappings_version=2022.11.27-1.19.2
+mappings_version=1.19.3
 jb_annotations=21.0.1
 
 # Test dependencies
@@ -19,7 +20,7 @@ kotlinx_coroutines_version=1.6.0-RC3
 ttoolkit_version=0.1.3
 
 # Mod dependencies
-cc_version=1.19.1:1.100.9
+cc_version=1.102.0-SNAPSHOT
 curios_version=1.19.2-5.1.1.0
 minecolonies_version=1.19.2-1.0.1060-ALPHA
 appliedenergistics_version=12.1.2-beta
@@ -27,7 +28,6 @@ patchouli_version=1.19.2-76
 refinedstorage_version=1.11.0
 botania_version=1.19.2-436-SNAPSHOT
 create_version=0.5.0.f-15
-flywheel_version=0.6.7-8
 mekanism_version=1.19.2-10.3.5.474
 
 # Mod dependencies which are needed for other mods
@@ -36,6 +36,9 @@ structurize_version=1.19.2-1.0.452-ALPHA
 domumornamentum_version=1.19-1.0.58-ALPHA
 blockui_version=1.19-0.0.64-ALPHA
 multipiston_version=1.19-1.2.14-ALPHA
+
+# For create
+flywheel_version=0.6.7-8
 
 # Mod dependencies for testing stuff(Only used in the dev environment)
 jei_version=1.19.2-forge:11.2.0.256
