--- a/build.gradle
+++ b/build.gradle
@@ -241,7 +241,7 @@ dependencies {
     // Minimal requirements
     compileOnly "org.jetbrains:annotations:${jb_annotations}"
     minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
-    implementation fg.deobf("org.squiddev:cc-tweaked-${cc_version}")
+    implementation fg.deobf("cc.tweaked:cc-tweaked-${minecraft_version}-forge:${cc_version}")
     // Compile-time API required
     // Ae2
     compileOnly fg.deobf("appeng:appliedenergistics2:${appliedenergistics_version}")
@@ -296,7 +296,7 @@ dependencies {
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junit_version}"
     // Testing stuff
     // JEI
-    implementation fg.deobf("mezz.jei:jei-${jei_version}")
+    //implementation fg.deobf("mezz.jei:jei-${jei_version}")
 }
 
 
