--- a/gradle.properties
+++ b/gradle.properties
@@ -25,6 +25,7 @@ minecolonies_version=1.18.2-1.0.992-ALPHA
 appliedenergistics_version=11.1.4
 patchouli_version=1.18.2-72-SNAPSHOT
 refinedstorage_version=1.10.2
+mekanism_version=1.18.2-10.2.5.465
 botania_version=1.18.2-434
 create_version=mc1.18.2_v0.5.0c+146
 flywheel_version=1.18-0.6.4.87
